[HHQ-3207] adding Slave_IO_Running and Slave_SQL_Running metrics.  Added special casing for Seconds_Behind_Master metric.